add leaflet openstreetmap etc

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Current Wars Map</title>
+  
   <!-- Link to the external CSS file for themes and styling -->
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Leaflet.js for OpenStreetMap -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body>
   <header>
@@ -14,19 +18,24 @@
       <!-- Dropdown to select different wars -->
       <select id="war-selector">
         <option value="" disabled selected>Select a war</option>
-        <!-- Options will be populated dynamically from a JSON file (e.g., wars.json) via script.js -->
+        <!-- Options will be populated dynamically from a JSON file -->
       </select>
     </div>
   </header>
 
   <main>
-    <!-- Container for the map graphic -->
+    <!-- Container for the interactive map -->
     <div id="map-container">
-      <!-- Canvas element used as a placeholder for an interactive map graphic -->
-      <canvas id="map-canvas" width="800" height="600"></canvas>
+      <div id="map"></div>
     </div>
+
+    <!-- Container for war details -->
+    <div id="war-details"></div>
   </main>
 
+  <!-- Leaflet.js Script -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  
   <!-- Link to the external JS file for handling interactivity and loading JSON data -->
   <script src="script.js"></script>
 </body>
